--- a/Stash/RuleSet/AI.yaml
+++ b/Stash/RuleSet/AI.yaml
@@ -46,7 +46,7 @@ payload:
   - DOMAIN,api.msn.com
   - DOMAIN,assets.msn.com
   - DOMAIN,dealczars.bing-shopping.microsoft-falcon.io
-  - DOMAIN,eas.outlook.com
+  #- DOMAIN,eas.outlook.com
   - DOMAIN,gateway.bingviz.microsoftapp.net
   - DOMAIN,in.appcenter.ms
   - DOMAIN,location.microsoft.com
