--- a/Surge/Config/Evolve.conf
+++ b/Surge/Config/Evolve.conf
@@ -1,7 +1,7 @@
 # > Surge Config Make by Coldvvater
 # > TG Channel: https://t.me/Coldvvater_Channel
 # > GitHub: https://github.com/Coldvvater
-# > Update Date: 2023.12.24
+# > Update Date: 2023.12.31
 
 [General]
 # > 日志等级
@@ -73,7 +73,7 @@ exclude-simple-hostnames = true
 # > DNS 服务器
 dns-server = 223.5.5.5,119.29.29.29,180.184.1.1
 # > 加密 DNS 服务器(默认关闭，按需启用)
-#encrypted-dns-server = quic://223.5.5.5:853,https://1.12.12.12/dns-query
+encrypted-dns-server = quic://223.5.5.5:853,https://1.12.12.12/dns-query
 # > Hijack DNS
 hijack-dns = *:53
 # > 关闭 DOH 的服务端证书验证
@@ -86,6 +86,9 @@ use-local-host-item-for-proxy = false
 # > UDP IP 防泄漏
 # 如果没有代理服务器支持 UDP 转发，可修改为「direct」或注释下条，但需注意同一目标主机名 TCP 请求与 UDP 请求的源地址不同所造成的隐私及安全风险。
 udp-policy-not-supported-behaviour = REJECT
+
+# > 强行关闭对特定主机名的主动协议嗅探
+always-raw-tcp-hosts = www.google.com, 91.108.*, 5.28.19*, 149.154.1*, 185.76.151.*, 91.105.1*, 95.161.6*
 
 # > 提高处理 UDP 流量优先级
 udp-priority = true
