--- a/Stash/RuleSet/AI.yaml
+++ b/Stash/RuleSet/AI.yaml
@@ -45,6 +45,7 @@ payload:
   # > Microsoft Copilot App 
   - DOMAIN,api.msn.com
   - DOMAIN,assets.msn.com
+  - DOMAIN,copilot.microsoft.com
   - DOMAIN,dealczars.bing-shopping.microsoft-falcon.io
   #- DOMAIN,eas.outlook.com
   - DOMAIN,gateway.bingviz.microsoftapp.net
