--- a/Stash/RuleSet/AI.yaml
+++ b/Stash/RuleSet/AI.yaml
@@ -1,5 +1,5 @@
 payload:
-  # > OpenAI ChatGPT
+  # > OpenAI ChatGPT & ChatGPT Voice
   - DOMAIN,api.statsig.com
   - DOMAIN,browser-intake-datadoghq.com
   - DOMAIN,cdn.openai.com
@@ -15,9 +15,11 @@ payload:
   - DOMAIN-SUFFIX,auth0.com
   - DOMAIN-SUFFIX,cdn.cloudflare.net
   - DOMAIN-SUFFIX,challenges.cloudflare.com
+  - DOMAIN-SUFFIX,chatgpt.livekit.cloud
   - DOMAIN-SUFFIX,client-api.arkoselabs.com
   - DOMAIN-SUFFIX,events.statsigapi.net
   - DOMAIN-SUFFIX,featuregates.org
+  - DOMAIN-SUFFIX,host.livekit.cloud
   - DOMAIN-SUFFIX,identrust.com
   - DOMAIN-SUFFIX,intercom.io
   - DOMAIN-SUFFIX,intercomcdn.com
@@ -33,45 +35,8 @@ payload:
   - DOMAIN-SUFFIX,segment.io
   - DOMAIN-SUFFIX,sentry.io
   - DOMAIN-SUFFIX,stripe.com
-  - DOMAIN-KEYWORD,openaicom-api
-
-  # > Arc 浏览器 Ask on page
-  - DOMAIN,open-ai-chat-omega.vercel.app
-
-  # > New Bing
-  - DOMAIN-SUFFIX,bing.com
-  - DOMAIN-SUFFIX,bingapis.com
-
-  # > Microsoft Copilot App 
-  - DOMAIN,api.msn.com
-  - DOMAIN,assets.msn.com
-  - DOMAIN,copilot.microsoft.com
-  - DOMAIN,dealczars.bing-shopping.microsoft-falcon.io
-  #- DOMAIN,eas.outlook.com
-  - DOMAIN,gateway.bingviz.microsoftapp.net
-  - DOMAIN,in.appcenter.ms
-  - DOMAIN,location.microsoft.com
-  - DOMAIN,login.microsoftonline.com
-  - DOMAIN,self.events.data.microsoft.com
-  - DOMAIN,services.bingapis.com
-  - DOMAIN,shopping.bing-shopping.microsoft-falcon.io
-  - DOMAIN,sapphire.api.microsoftapp.net
-  - DOMAIN,sr.bing.com
-  - DOMAIN,sydney.bing.com
-  - DOMAIN,ssl.bing.com
-
-  # > Claude
-  - DOMAIN,cdn.usefathom.com
-  - DOMAIN-SUFFIX,anthropic.com
-  - DOMAIN-SUFFIX,claude.ai
-
-  # > Bard
-  - DOMAIN,bard.google.com
-
-  # > ChatGPT Voice
-  - DOMAIN-SUFFIX,chatgpt.livekit.cloud
-  - DOMAIN-SUFFIX,host.livekit.cloud
   - DOMAIN-SUFFIX,turn.livekit.cloud
+  - DOMAIN-KEYWORD,openaicom-api
   - IP-CIDR,24.199.123.28/32,no-resolve
   - IP-CIDR,45.32.12.145/32,no-resolve
   - IP-CIDR,45.55.196.68/32,no-resolve
@@ -86,10 +51,44 @@ payload:
   - IP-CIDR,164.92.115.213/32,no-resolve
   - IP-CIDR,198.13.38.242/32,no-resolve
   - IP-CIDR,207.148.108.93/32,no-resolve
-  - IP-CIDR6,2001:19f0:7001:55b3:5400:4ff:feab:ba8f/128,no-resolve
+  - IP-CIDR6, 2001:19f0:7001:55b3:5400:4ff:feab:ba8f/128,no-resolve
   - IP-CIDR6,2001:19f0:7001:8e6:5400:4ff:feab:b953/128,no-resolve
   - IP-CIDR6,2001:19f0:7001:1149:5400:4ff:feac:a0b3/128,no-resolve
   - IP-CIDR6,2001:19f0:7001:8e6:5400:4ff:feab:b953/128,no-resolve
   - IP-CIDR6,2401:c080:1000:47c5:5400:4ff:feab:f724/128,no-resolve
-  #- IP-ASN,14061,no-resolve
-  #- IP-ASN,20473,no-resolve
+  #IP-ASN,14061,no-resolve
+  #IP-ASN,20473,no-resolve
+
+  # > Arc 浏览器 Ask on page
+  - DOMAIN,open-ai-chat-omega.vercel.app
+
+  # > New Bing
+  - DOMAIN-SUFFIX,bing.com
+  - DOMAIN-SUFFIX,bingapis.com
+
+  # > Microsoft Copilot App 
+  - DOMAIN,api.msn.com
+  - DOMAIN,assets.msn.com
+  - DOMAIN,copilot.microsoft.com
+  - DOMAIN,dealczars.bing-shopping.microsoft-falcon.io
+  #- DOMAIN,eas.outlook.com
+  - DOMAIN,edgeservices.bing.com
+  - DOMAIN,functional.events.data.microsoft.com
+  - DOMAIN,gateway.bingviz.microsoftapp.net
+  - DOMAIN,in.appcenter.ms
+  - DOMAIN,location.microsoft.com
+  - DOMAIN,login.microsoftonline.com
+  - DOMAIN,proteus-assetstore.azurewebsites.net
+  - DOMAIN,self.events.data.microsoft.com
+  - DOMAIN,services.bingapis.com
+  - DOMAIN,shopping.bing-shopping.microsoft-falcon.io
+  - DOMAIN,sapphire.api.microsoftapp.net
+  - DOMAIN-SUFFIX,edge.microsoft.com
+
+  # > Claude
+  - DOMAIN,cdn.usefathom.com
+  - DOMAIN-SUFFIX,anthropic.com
+  - DOMAIN-SUFFIX,claude.ai
+
+  # > Bard
+  - DOMAIN,bard.google.com
