Adjust the rule and policy

--- a/Surge/Config/Evolve.conf
+++ b/Surge/Config/Evolve.conf
@@ -1,7 +1,7 @@
 # > Surge Config Make by Coldvvater
 # > TG Channel: https://t.me/Coldvvater_Channel
 # > GitHub: https://github.com/Coldvvater
-# > Update Date: 2023.12.31
+# > Update Date: 2023.01.25
 
 [General]
 # > 日志等级
@@ -170,7 +170,7 @@ Microsoft = select, DIRECT, Proxy, Auto, Fallback, HongKong, TaiWan, Singapore, 
 Games = select, Proxy, Auto, Fallback, HongKong, TaiWan, Singapore, Japan, America, Others, DIRECT, no-alert=0, hidden=0
 
 # > 网络测试
-Speedtest = select, DIRECT, Proxy, no-alert=0, hidden=0
+Speedtest = select, Proxy, DIRECT, no-alert=0, hidden=0
 
 # > 香港节点
 HongKong = select, policy-regex-filter=港|🇭🇰|香港|HK|Hong, no-alert=0, hidden=0, include-all-proxies=0, include-other-group="Auto"
@@ -192,11 +192,6 @@ Others = select, policy-regex-filter=^((?!🇭🇰|港|HK|Hong|🇹🇼|台|TW|T
 
 [Rule]
 # > 规则分流
-# GitHub直连加速域名
-DOMAIN-SUFFIX,gitmirror.com,Global
-
-# > Speedtest
-DOMAIN-SUFFIX,ziffstatic.com,Speedtest
 
 # > 局域网/隐私网络
 RULE-SET,https://raw.gitmirror.com/blackmatrix7/ios_rule_script/master/rule/Surge/Lan/Lan.list,DIRECT
@@ -246,9 +241,6 @@ RULE-SET,https://raw.gitmirror.com/blackmatrix7/ios_rule_script/master/rule/Surg
 
 # > 国外网站
 RULE-SET,https://raw.gitmirror.com/blackmatrix7/ios_rule_script/master/rule/Surge/Global/Global_All_No_Resolve.list,Global
-
-# > 国内网站
-RULE-SET,https://raw.gitmirror.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list,DIRECT
 
 # > 防止应用循环请求
 IP-CIDR,0.0.0.0/32,REJECT,no-resolve
