--- a/Stash/RuleSet/Telegram.yaml
+++ b/Stash/RuleSet/Telegram.yaml
@@ -36,6 +36,9 @@ payload:
   # Swiftgram
   - DOMAIN-SUFFIX,swiftgram.app
 
+  # Turrit
+  - DOMAIN-SUFFIX,iturrit.com
+
   # DC5
   - IP-CIDR,91.108.16.0/22,no-resolve
   - IP-CIDR,91.108.56.0/23,no-resolve
