--- a/Stash/RuleSet/AI.yaml
+++ b/Stash/RuleSet/AI.yaml
@@ -91,7 +91,6 @@ payload:
   - DOMAIN-SUFFIX,claude.ai
 
   # > Gemini
-  - DOMAIN, generativelanguage.googleapis.com
-
-  # > Bard
-  - DOMAIN,bard.google.com
+  - DOMAIN-SUFFIX,bard.google.com
+  - DOMAIN,gemini.google.com
+  - DOMAIN,generativelanguage.googleapis.com
