--- a/Surge/Config/Evolve.conf
+++ b/Surge/Config/Evolve.conf
@@ -1,7 +1,7 @@
 # > Surge Config Make by Coldvvater
 # > TG Channel: https://t.me/Coldvvater_Channel
 # > GitHub: https://github.com/Coldvvater
-# > Update Date: 2023.01.25
+# > Update Date: 2023.02.19
 
 [General]
 # > 日志等级
@@ -73,7 +73,7 @@ exclude-simple-hostnames = true
 # > DNS 服务器
 dns-server = 223.5.5.5,119.29.29.29,180.184.1.1
 # > 加密 DNS 服务器(默认关闭，按需启用)
-encrypted-dns-server = quic://223.5.5.5:853,https://1.12.12.12/dns-query
+encrypted-dns-server = quic://223.5.5.5,https://120.53.53.53/dns-query
 # > Hijack DNS
 hijack-dns = *:53
 # > 关闭 DOH 的服务端证书验证
@@ -88,7 +88,7 @@ use-local-host-item-for-proxy = false
 udp-policy-not-supported-behaviour = REJECT
 
 # > 强行关闭对特定主机名的主动协议嗅探
-always-raw-tcp-hosts = www.google.com, 91.108.*, 5.28.19*, 149.154.1*, 185.76.151.*, 91.105.1*, 95.161.6*
+always-raw-tcp-hosts = 5.28.19*
 
 # > 提高处理 UDP 流量优先级
 udp-priority = true
