adjust doh and rules

--- a/Surge/Config/Evolve.conf
+++ b/Surge/Config/Evolve.conf
@@ -1,7 +1,7 @@
 # > Surge Config Make by Coldvvater
 # > TG Channel: https://t.me/Coldvvater_Channel
 # > GitHub: https://github.com/Coldvvater
-# > Update Date: 2023.02.19
+# > Update Date: 2023.03.07
 
 [General]
 # > 日志等级
@@ -17,7 +17,7 @@ test-timeout = 5
 # > 自定义 GeoIP 数据库
 geoip-maxmind-url = https://raw.gitmirror.com/soffchen/GeoIP2-CN/release/Country.mmdb
 # > GeoIP 禁用自动更新
-disable-geoip-db-auto-update = false
+disable-geoip-db-auto-update = true
 
 # > IPv6 支持（默认关闭）
 ipv6 = false
@@ -73,7 +73,7 @@ exclude-simple-hostnames = true
 # > DNS 服务器
 dns-server = 223.5.5.5,119.29.29.29,180.184.1.1
 # > 加密 DNS 服务器(默认关闭，按需启用)
-encrypted-dns-server = quic://223.5.5.5,https://120.53.53.53/dns-query
+encrypted-dns-server = quic://dns.alidns.com,https://doh.pub/dns-query
 # > Hijack DNS
 hijack-dns = *:53
 # > 关闭 DOH 的服务端证书验证
@@ -193,6 +193,9 @@ Others = select, policy-regex-filter=^((?!🇭🇰|港|HK|Hong|🇹🇼|台|TW|T
 [Rule]
 # > 规则分流
 
+# > 防止应用循环请求
+IP-CIDR,0.0.0.0/32,REJECT,no-resolve
+
 # > 局域网/隐私网络
 RULE-SET,https://raw.gitmirror.com/blackmatrix7/ios_rule_script/master/rule/Surge/Lan/Lan.list,DIRECT
 
@@ -242,11 +245,8 @@ RULE-SET,https://raw.gitmirror.com/blackmatrix7/ios_rule_script/master/rule/Surg
 # > 国外网站
 RULE-SET,https://raw.gitmirror.com/blackmatrix7/ios_rule_script/master/rule/Surge/Global/Global_All_No_Resolve.list,Global
 
-# > 防止应用循环请求
-IP-CIDR,0.0.0.0/32,REJECT,no-resolve
-
-# > GeoIP China
-GEOIP,CN,DIRECT
+# > ASN China
+RULE-SET,https://raw.gitmirror.com/VirgilClyne/GetSomeFries/main/ruleset/ASN.China.list,DIRECT
 
 # > DNS 查询失败走 Final 规则
 FINAL,Final,dns-failed
