--- a/Stash/Clash/Config/Evolve.yaml
+++ b/Stash/Clash/Config/Evolve.yaml
@@ -1,7 +1,7 @@
 # Stash/Clash/Premium/Meta Config Make by Coldvvater
 # TG Channel: https://t.me/Coldvvater_Channel
 # GitHub: https://github.com/Coldvvater
-# Update Date: 2023.02.19
+# Update Date: 2023.03.07
 
 mixed-port: 7890                     # 混合端口，HTTP和SOCKS5用一个端口
 allow-lan: true                      # 允许局域网的连接（共享代理）
@@ -21,7 +21,7 @@ dns:
   listen: 0.0.0.0:53                 # DNS 监听地址
   default-nameserver: [223.5.5.5, 119.29.29.29]
                                      # 解析非IP的dns用的dns服务器，只支持纯IP
-  nameserver: [https://223.5.5.5/dns-query, https://120.53.53.53/dns-query]
+  nameserver: [https://dns.alidns.com/dns-query, https://doh.pub/dns-query]
                                      # 默认DNS服务器，支持udp/tcp/dot/doh/doq
 
   fake-ip-range: 198.18.0.1/16       # Fake-IP 解析地址池
@@ -41,7 +41,7 @@ i: &i {type: http, behavior: ipcidr, interval: 86400}
 g: &g {type: select, proxies: [Proxy, Auto, Fallback, HongKong, TaiWan, Singapore, Japan, America, Others, DIRECT]}
 
 # 远程订阅相关
-p: &p {type: http, interval: 42300, health-check: {enable: true, url: http://www.apple.com/library/test/success.html, interval: 600}}
+p: &p {type: http, interval: 86400, benchmark-timeout: 5, health-check: {enable: true, url: http://www.apple.com/library/test/success.html, interval: 600}}
 
 # 订阅引用相关
 u: &u {type: select, use: [Subscribe]}
