--- a/Surge/Config/Evolve.conf
+++ b/Surge/Config/Evolve.conf
@@ -1,7 +1,7 @@
 # > Surge Config Make by Coldvvater
 # > TG Channel: https://t.me/Coldvvater_Channel
 # > GitHub: https://github.com/Coldvvater
-# > Update Date: 2024.04.02
+# > Update Date: 2024.04.12
 
 [General]
 # > 日志等级
@@ -143,7 +143,7 @@ BiliBili = select, DIRECT, HongKong, TaiWan, no-alert=0, hidden=0
 Spotify = select, Proxy, Auto, Fallback, HongKong, TaiWan, Singapore, Japan, America, Others, DIRECT, no-alert=0, hidden=0
 
 # > 网易云音乐
-NetEaseMusic = select, DIRECT, Proxy, no-alert=0, hidden=0
+NetEaseMusic = select, DIRECT, no-alert=0, hidden=0
 
 # > 海外抖音
 TikTok = select, Proxy, Auto, Fallback, HongKong, TaiWan, Singapore, Japan, America, Others, DIRECT, no-alert=0, hidden=0
@@ -248,8 +248,6 @@ RULE-SET,https://raw.gitmirror.com/VirgilClyne/GetSomeFries/main/ruleset/ASN.Chi
 FINAL,Final,dns-failed
 
 [MITM]
-# > 跳过服务端证书验证
-skip-server-cert-verify = true
 # > MITM over HTTP/2
 h2 = true
 
