--- a/Stash/RuleSet/Telegram.yaml
+++ b/Stash/RuleSet/Telegram.yaml
@@ -37,56 +37,38 @@ payload:
   # Turrit
   - DOMAIN-SUFFIX,iturrit.com
 
-  # DC5
+  # > Singapore DC5
   - IP-CIDR,91.108.16.0/22,no-resolve
-  - IP-CIDR,91.108.56.0/23,no-resolve
-  - IP-CIDR,149.154.168.0/22,no-resolve
+  - IP-CIDR,91.108.56.0/22,no-resolve
+  - IP-CIDR6,2001:b28:f23f::/48,no-resolve
+  #- IP-ASN,62014,no-resolve
 
-  # DC4
+  # > Europe DC4
+  - IP-CIDR,149.154.160.0/20,no-resolve
   - IP-CIDR,91.108.4.0/22,no-resolve
   - IP-CIDR,91.108.8.0/22,no-resolve
-  - IP-CIDR,91.108.56.0/22,no-resolve
-  - IP-CIDR,95.161.64.0/20,no-resolve
-  - IP-CIDR,149.154.160.0/22,no-resolve
-  - IP-CIDR,149.154.162.0/23,no-resolve
-  - IP-CIDR,149.154.164.0/22,no-resolve
-  - IP-CIDR,149.154.166.0/23,no-resolve
+  - IP-CIDR6,2001:b28:f23d::/48,no-resolve
+  - IP-CIDR6,2001:67c:4e8::/48,no-resolve
+  #- IP-ASN,62041,no-resolve
 
-  # DC1
+  # > Americas DC1
   - IP-CIDR,91.108.12.0/22,no-resolve
-  - IP-CIDR,149.154.172.0/22,no-resolve
+  - IP-CIDR6,2a0a:f280::/32,no-resolve
+  #- IP-ASN,59930,no-resolve
 
-  # DC2
-  - IP-CIDR,91.108.20.0/22,no-resolve
-
-  # DC3
+  # > Finland DC3
   - IP-CIDR,91.105.192.0/23,no-resolve
   - IP-CIDR,185.76.151.0/24,no-resolve
-
-  # Other
-  - IP-CIDR,5.28.192.0/18,no-resolve
-
-  # DC5-V6
-  - IP-CIDR6,2001:b28:f23f::/48,no-resolve
-  # DC4-V6
-  - IP-CIDR6,2001:67c:4e8::/48,no-resolve
-  # DC1-V6
-  - IP-CIDR6,2001:b28:f23d::/48,no-resolve
-  # DC2-V6
-  - IP-CIDR6,2001:b28:f23c::/48,no-resolve
-  # DC3-V6
-  - IP-CIDR6,2a0a:f280:203::/48,no-resolve
-
-  # DC5-ASN
-  #- IP-ASN,62014,no-resolve
-  # DC4-ASN
-  #- IP-ASN,62041,no-resolve
-  # DC1-ASN
-  #- IP-ASN,59930,no-resolve
-  # DC2-ASN
-  #- IP-ASN,44907,no-resolve
-  # DC3-ASN
   #- IP-ASN,211157,no-resolve
+
+  # > India DC2
+  - IP-CIDR,91.108.20.0/22,no-resolve
+  - IP-CIDR6,2001:b28:f23c::/48,no-resolve
+  #- IP-ASN,44907,no-resolve
+
+  # > Other
+  - IP-CIDR,95.161.76.101/32,no-resolve
+  - IP-CIDR,5.28.192.0/18,no-resolve
 
   - PROCESS-NAME,nekox.messenger
   - PROCESS-NAME,org.telegram.messenger
