调整分流规则

--- a/Surge/Config/Evolve.conf
+++ b/Surge/Config/Evolve.conf
@@ -1,7 +1,7 @@
 # > Surge Config Make by Coldvvater
 # > TG Channel: https://t.me/Coldvvater_Channel
 # > GitHub: https://github.com/Coldvvater
-# > Update Date: 2024.04.17
+# > Update Date: 2024.04.22
 
 [General]
 # > 日志等级
@@ -189,6 +189,9 @@ Others = select, policy-regex-filter=^((?!🇭🇰|港|HK|Hong|🇹🇼|台|TW|T
 
 [Rule]
 # > 规则分流
+# > 代理域名
+OR,((DOMAIN,raw.gitmirror.com), (DOMAIN,ruleset.skk.moe), (DOMAIN,www.surge-activation.com)),Proxy
+
 # > 防止应用循环请求
 IP-CIDR,0.0.0.0/32,REJECT,no-resolve
 
@@ -196,7 +199,7 @@ IP-CIDR,0.0.0.0/32,REJECT,no-resolve
 RULE-SET,https://raw.gitmirror.com/blackmatrix7/ios_rule_script/master/rule/Surge/Lan/Lan.list,DIRECT
 
 # > Speedtest
-RULE-SET,https://raw.gitmirror.com/luestr/ProxyResource/main/Tool/Loon/Rule/Speedtest.list,Speedtest
+DOMAIN-SET,https://ruleset.skk.moe/List/domainset/speedtest.conf,Speedtest
 
 # > OpenAI
 RULE-SET,https://raw.gitmirror.com/Coldvvater/Mononoke/master/Surge/Rules/AI.list,OpenAI
@@ -239,13 +242,13 @@ RULE-SET,https://raw.gitmirror.com/blackmatrix7/ios_rule_script/master/rule/Surg
 RULE-SET,https://raw.gitmirror.com/blackmatrix7/ios_rule_script/master/rule/Surge/Game/Game.list,Games
 
 # > 国外网站
-RULE-SET,https://raw.gitmirror.com/blackmatrix7/ios_rule_script/master/rule/Surge/Global/Global_All_No_Resolve.list,Global,extended-matching
+RULE-SET,https://raw.gitmirror.com/Loyalsoldier/surge-rules/release/ruleset/proxy.txt,Global,extended-matching
 
 # > 系统请求
 RULE-SET,SYSTEM,DIRECT
 
-# > ASN China
-RULE-SET,https://raw.gitmirror.com/VirgilClyne/GetSomeFries/main/ruleset/ASN.China.list,DIRECT
+# > China IP
+RULE-SET,https://ruleset.skk.moe/List/ip/china_ip.conf,DIRECT
 
 # > DNS 查询失败走 Final 规则
 FINAL,Final,dns-failed
