--- a/Stash/RuleSet/Telegram.yaml
+++ b/Stash/RuleSet/Telegram.yaml
@@ -1,7 +1,9 @@
 payload:
   # Telegram List
+  - DOMAIN-SUFFIX,cdn-telegram.org
   - DOMAIN-SUFFIX,comments.app
   - DOMAIN-SUFFIX,contest.com
+  - DOMAIN-SUFFIX,fragment.com
   - DOMAIN-SUFFIX,graph.org
   - DOMAIN-SUFFIX,legra.ph
   - DOMAIN-SUFFIX,mbrx.app
@@ -12,7 +14,7 @@ payload:
   - DOMAIN-SUFFIX,telega.one
   - DOMAIN-SUFFIX,telegra.ph
   - DOMAIN-SUFFIX,telegram-cdn.org
-  - DOMAIN-SUFFIX,cdn-telegram.org
+
   - DOMAIN-SUFFIX,telegram.dog
   - DOMAIN-SUFFIX,telegram.me
   - DOMAIN-SUFFIX,telegram.org
@@ -25,7 +27,7 @@ payload:
   - DOMAIN-KEYWORD,telegram
 
   # Nicegram
-  - DOMAIN-KEYWORD,nicegram
+  - DOMAIN-SUFFIX,nicegram.app
 
   # iMe
   - DOMAIN,api.mixpanel.com
