--- a/Surge/Config/Evolve.conf
+++ b/Surge/Config/Evolve.conf
@@ -1,7 +1,7 @@
 # > Surge Config Make by Coldvvater
 # > TG Channel: https://t.me/Coldvvater_Channel
 # > GitHub: https://github.com/Coldvvater
-# > Update Date: 2024.04.27
+# > Update Date: 2024.05.05
 
 [General]
 # > 日志等级
@@ -17,7 +17,7 @@ test-timeout = 5
 # > 自定义 GeoIP 数据库
 geoip-maxmind-url = https://raw.gitmirror.com/soffchen/GeoIP2-CN/release/Country.mmdb
 # > GeoIP 禁用自动更新
-disable-geoip-db-auto-update = true
+disable-geoip-db-auto-update = false
 
 # > IPv6 支持（默认关闭）
 ipv6 = false
@@ -189,17 +189,14 @@ Others = select, policy-regex-filter=^((?!🇭🇰|港|HK|Hong|🇹🇼|台|TW|T
 
 [Rule]
 # > 规则分流
-# > 代理域名
-OR,((DOMAIN,raw.gitmirror.com), (DOMAIN,ruleset.skk.moe)),Proxy
+# > GitHub RAW 加速
+DOMAIN,raw.gitmirror.com,Proxy
 
 # > 防止应用循环请求
 IP-CIDR,0.0.0.0/32,REJECT,no-resolve
 
-# > 局域网/隐私网络
-RULE-SET,https://raw.gitmirror.com/blackmatrix7/ios_rule_script/master/rule/Surge/Lan/Lan.list,DIRECT
-
 # > Speedtest
-DOMAIN-SET,https://ruleset.skk.moe/List/domainset/speedtest.conf,Speedtest
+RULE-SET,https://raw.gitmirror.com/blackmatrix7/ios_rule_script/master/rule/Surge/Speedtest/Speedtest.list,Speedtest
 
 # > OpenAI
 RULE-SET,https://raw.gitmirror.com/Coldvvater/Mononoke/master/Surge/Rules/AI.list,OpenAI
@@ -215,7 +212,7 @@ RULE-SET,https://raw.gitmirror.com/blackmatrix7/ios_rule_script/master/rule/Surg
 RULE-SET,https://raw.gitmirror.com/blackmatrix7/ios_rule_script/master/rule/Surge/Spotify/Spotify.list,Spotify
 RULE-SET,https://raw.gitmirror.com/blackmatrix7/ios_rule_script/master/rule/Surge/NetEaseMusic/NetEaseMusic.list,NetEaseMusic
 RULE-SET,https://raw.gitmirror.com/luestr/ProxyResource/main/Tool/Loon/Rule/TikTok.list,TikTok
-RULE-SET,https://raw.gitmirror.com/ConnersHua/RuleGo/master/Surge/Ruleset/Extra/Streaming/!CN.list,Streaming
+RULE-SET,https://raw.gitmirror.com/blackmatrix7/ios_rule_script/master/rule/Surge/GlobalMedia/GlobalMedia_All_No_Resolve.list,Streaming
 
 # > Telegram
 RULE-SET,https://raw.gitmirror.com/Coldvvater/Mononoke/master/Surge/Rules/Telegram.list,Telegram
@@ -247,8 +244,11 @@ RULE-SET,https://raw.gitmirror.com/blackmatrix7/ios_rule_script/master/rule/Surg
 # > 系统请求
 RULE-SET,SYSTEM,DIRECT
 
-# > China IP
-RULE-SET,https://ruleset.skk.moe/List/ip/china_ip.conf,DIRECT
+# > 局域网
+RULE-SET,LAN,DIRECT
+
+# > GEOIP China
+GEOIP,CN,DIRECT
 
 # > DNS 查询失败走 Final 规则
 FINAL,Final,dns-failed
