移除Speedtest策略及分流，添加Twitter(X)策略组。

--- a/Surge/Config/Evolve.conf
+++ b/Surge/Config/Evolve.conf
@@ -154,7 +154,7 @@ Streaming = select, Proxy, Auto, Fallback, HongKong, TaiWan, Singapore, Japan, A
 # > 电报信息
 Telegram = select, Proxy, Auto, Fallback, HongKong, TaiWan, Singapore, Japan, America, Others, DIRECT, no-alert=0, hidden=0
 
-# > Twitter
+# > Twitter(X)
 Twiitter = select, Proxy, Auto, Fallback, HongKong, TaiWan, Singapore, Japan, America, Others, no-alert=0, hidden=0
 
 # > 苹果服务
